<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eParking BE</string>
    <string name="action_settings">Préférences</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>

    <string name="noIdAuto">Veuillez entrer un numéro de plaque\nSans espaces ni traits d\'union.</string>
    <string name="noIdZone">Veuillez entrer le numéro de zone se situant sur le coté de la borne de parking la plus proche.</string>
    <string name="noContact">Veuillez cocher un des numéros de contact.</string>
    <string name="noValues">Veuillez entrer des valeurs !</string>

    <string name="contactNum1">4810</string>
    <string name="contactLabel1">Verviers</string>

    <string name="contactNum2">4411</string>
    <string name="contactLabel2">Liège</string>

    <string name="contactNum3">%1$s</string>
    <string name="contactLabel3"><i>Entrée manuelle</i></string>

    <string name="idAuto1">Immatriculation</string>
    <string name="idAuto2">1DLI125</string>

    <string name="idZone1">Identifiant de Zone</string>
    <string name="idZone2">Ver2</string>

    <string name="parkStart"><b>Start</b></string>
    <string name="parkStop">Stop</string>

    <string name="infoLabel"><u><b>Informations :</b></u></string>
    <string name="infoShow"><i>En attente d\'une entrée utilisateur...</i></string>
    <string name="infoShow2">Message \"%1$s\" envoyé au numéro \"%2$s\"</string>
    <string name="infoEtat"></string>

    <string name="timerLabel">timerLabel</string>
    <string name="timerShow">timerShow</string>

    <string name="smsSend_OK">SMS envoyé</string>
    <string name="smsSend_ERROR_GENERIC_FAILURE">Erreur générale</string>
    <string name="smsSend_ERROR_NULL_PDU">Texte trop long</string>
    <string name="smsSend_ERROR_NO_SERVICE">Pas de réseau</string>
    <string name="smsSend_ERROR_RADIO_OFF">Réseau coupé</string>

    <string name="smsReceive_OK">SMS reçu</string>
    <string name="smsReceive_CANCELED">SMS non reçu</string>

</resources>
